(subdir entry
(executable
 (public_name jasminc)
 (name jasminc)
 (modules jasminc)
 (flags -rectypes)
 (modes byte exe)
 (libraries jasminc))

(executable
 (public_name jazz2tex)
 (name jazz2tex)
 (modules jazz2tex)
 (flags -rectypes)
 (modes byte exe)
 (libraries cmdliner jasmin))

(executable
 (public_name jazz2cl)
 (name jazz2cl)
 (modules jazz2cl)
 (flags -rectypes)
 (modes byte exe)
 (libraries cmdliner jasmin))
)
