(subdir entry

(library
  (name commonCLI)
  (wrapped false)
  (libraries cmdliner jasmin.jasmin)
  (flags (:standard -rectypes))
  (modules commonCLI))

(executable
 (public_name jasminc)
 (name jasminc)
 (modules jasminc)
 (flags (:standard -rectypes))
 (modes byte exe)
 (libraries jasminc))

(executable
 (public_name jasmin2tex)
 (name jasmin2tex)
 (modules jasmin2tex)
 (flags (:standard -rectypes))
 (modes byte exe)
 (libraries commonCLI))

(executable
 (public_name jasmin-ct)
 (name jasmin_ct)
 (modules jasmin_ct)
 (flags (:standard -rectypes))
 (modes byte exe)
 (libraries commonCLI))

(executable
 (public_name jasmin2ec)
 (name jasmin2ec)
 (modules jasmin2ec)
 (flags (:standard -rectypes))
 (modes byte exe)
 (libraries commonCLI))
)
