opam-version: "2.0"
name: "jasmin"
version: "dev"
maintainer: "Jean-Christophe Léchenet <jean-christophe.lechenet@inria.fr>"
authors: "Jasmin authors and contributors"
homepage: "https://github.com/jasmin-lang/jasmin"
bug-reports: "https://github.com/jasmin-lang/jasmin/issues"
synopsis: "High-Assurance and High-Speed Cryptography"
license: "MIT"

build: [
  make "build"
]
install: [
  mkdir -p "%{prefix}%/bin"
  cp "_build/default/entry/jasminc.exe" "%{prefix}%/bin/jasminc"
  cp "_build/default/entry/jazz2tex.exe" "%{prefix}%/bin/jazz2tex"
  cp "_build/default/entry/jazzct.exe" "%{prefix}%/bin/jazzct"
  mkdir -p "%{prefix}%/lib/jasmin/easycrypt"
  sh -c "cp ../eclib/*.ec \"%{prefix}%/lib/jasmin/easycrypt/\""
]
depends: [
  "ocaml" { >= "4.11" & build }
  "batteries" {>= "3.4"}
  "cmdliner" {>= "1.1" & build }
  "dune" {>= "3.2"}
  "menhir" {>= "20160825" & build }
  "menhirLib"
  "camlidl"
  "zarith" {>= "1.9"}
  "apron" {>= "v0.9.12"}
  "conf-ppl"
  "yojson" {>= "1.6.0"}
  "angstrom"
  "ocamlfind" { build }
]
conflicts: [
  "ez-conf-lib"
]
