opam-version: "2.0"
name: "jasmin"
version: "dev"
maintainer: "Jean-Christophe Léchenet <jean-christophe.lechenet@inria.fr>"
authors: "Jasmin authors and contributors"
homepage: "https://github.com/jasmin-lang/jasmin"
bug-reports: "https://github.com/jasmin-lang/jasmin/issues"
synopsis: "High-Assurance and High-Speed Cryptography"
license: "MIT"

build: [
  make "build"
]
install: [
  mkdir -p "%{prefix}%/bin"
  cp -L "_build/install/default/bin/jasminc" "%{prefix}%/bin/jasminc"
  cp -L "_build/install/default/bin/jasmin2tex" "%{prefix}%/bin/jasmin2tex"
  cp -L "_build/install/default/bin/jasmin-ct" "%{prefix}%/bin/jasmin-ct"
  cp -L "_build/install/default/bin/jasmin2ec" "%{prefix}%/bin/jasmin2ec"
  mkdir -p "%{prefix}%/lib/jasmin/easycrypt"
  sh -c "cp ../eclib/*.ec \"%{prefix}%/lib/jasmin/easycrypt/\""
]
depends: [
  "ocaml" { >= "4.11" & build }
  "batteries" {>= "3.5"}
  "cmdliner" {>= "1.1" & build }
  "dune" {>= "3.2"}
  "menhir" {>= "20160825" & build }
  "menhirLib"
  "camlidl"
  "zarith" {>= "1.9"}
  "apron" {>= "v0.9.12"}
  "conf-ppl"
  "yojson" {>= "1.6.0"}
  "angstrom" {>= "0.14.0"}
  "ocamlfind" { build }
]
conflicts: [
  "ez-conf-lib"
]
