opam-version: "2.0"
version: "dev"
synopsis: "Compiler for High-Assurance and High-Speed Cryptography"
description: """
Jasmin is a workbench for high-assurance and high-speed cryptography. Jasmin
implementations aim at being efficient, safe, correct, and secure.
"""
maintainer: "Jean-Christophe Léchenet <jean-christophe.lechenet@inria.fr>"
authors: ["Jasmin authors and contributors"]
license: "MIT"
homepage: "https://github.com/jasmin-lang/jasmin"
bug-reports: "https://github.com/jasmin-lang/jasmin/issues"
dev-repo: "git+https://gitlab.com/jasmin-lang/jasmin-compiler.git"

build: [
  [make "-C" "compiler"]
]
install: [
  ["mkdir" "-p" "%{prefix}%/bin"]
  ["cp" "-L" "compiler/_build/install/default/bin/jasminc" "%{prefix}%/bin/jasminc"]
  ["cp" "-L" "compiler/_build/install/default/bin/jasmin2tex" "%{prefix}%/bin/jasmin2tex"]
  ["cp" "-L" "compiler/_build/install/default/bin/jasmin-ct" "%{prefix}%/bin/jasmin-ct"]
  ["cp" "-L" "compiler/_build/install/default/bin/jasmin2ec" "%{prefix}%/bin/jasmin2ec"]
  ["mkdir" "-p" "%{prefix}%/lib/jasmin/easycrypt"]
  ["sh" "-c" "cp eclib/*.ec \"%{prefix}%/lib/jasmin/easycrypt/\""]
]
depends: [
  "ocaml" { >= "4.11" & build }
  "batteries" {>= "3.5"}
  "cmdliner" {>= "1.1" & build }
  "dune" {>= "3.2"}
  "menhir" {>= "20160825" & build }
  "menhirLib"
  "camlidl"
  "zarith" {>= "1.9"}
  "apron" {>= "v0.9.12"}
  "conf-ppl"
  "yojson" {>= "1.6.0"}
  "angstrom" {>= "0.14.0"}
  "ocamlfind" { build }
]
conflicts: [
  "ez-conf-lib"
]
