(include_subdirs unqualified)

(ocamllex
 (modules lexer))

(menhir
 (flags "--table" "--explain" "--inspection")
 (modules parser))

(library
 (name jasmin)
 (public_name jasmin.jasmin)
 (flags (:standard -w -9-27-32-33-34-37-50-67-69))
 (modules :standard \ main_compiler x86_safety)
 (libraries angstrom batteries.unthreaded zarith menhirLib uint63))

(library
 (name jasminc)
 (flags (:standard -w -67))
 (modules main_compiler x86_safety)
 (libraries jasmin jasmin_checksafety))
