(include_subdirs unqualified)

(ocamllex
 (modules lexer))

(menhir
 (flags "--table" "--explain" "--inspection")
 (modules parser))

(library
 (name jasmin)
 (public_name jasmin.jasmin)
 (flags (:standard -w -9-27-32-33-34-37-39-50-67))
 (modules :standard \ main_compiler)
 (libraries angstrom batteries.unthreaded zarith menhirLib uint63))

(library
 (name jasminc)
 (modules main_compiler)
 (libraries jasmin jasmin_checksafety linter))
