(coq.extraction
  (prelude extraction)
  (theories HB elpi elpi_elpi mathcomp arch common compiler jasmin_compiler lang ssrmisc thirdparty armv7 riscv x86) ; Jasmin?
  (flags -w -extraction-reserved-identifier
         -w -extraction-opaque-accessed)
  (extracted_modules
    allocation
    arch_decl
    arch_extra
    arch_params
    arch_utils
    arm_decl
    arm_expand_imm
    arm_extra
    arm_instr_decl
    arm_lowering
    arm
    arm_params_common
    arm_params_core
    arm_params
    arm_stack_zeroization
    array_copy
    array_expansion
    array_init
    Ascii
    asm_gen
    bigop
    BinInt
    BinNat
    BinNums
    BinPosDef
    BinPos
    Bool
    choice
    CMorphisms
    compiler
    compiler_util
    constant_prop
    CRelationClasses
    Datatypes
    dead_calls
    dead_code
    DecidableType
    div
    eqb_core_defs
    eqbOK
    EqdepFacts
    eqtype
    Equalities
    expr
    fexpr
    finfun
    fintype
    flag_combination
    FMapAVL
    FMapFacts
    FMapList
    gen_map
    global
    ident
    Init
    inline
    Int
    label
    lea
    linearization
    linear
    linear_util
    List0
    load_constants_in_cond
    lowering
    lower_spill
    low_memory
    makeReferenceArguments
    memory_example
    memory_model
    merge_varmaps
    MSetDecide
    MSetEqProperties
    MSetFacts
    MSetInterface
    MSetProperties
    Nat0
    one_varmap
    OrderedType
    order
    Orders
    OrdersTac
    oseq
    param1
    param1_trivial
    PeanoNat
    post_unrolling_check
    Prelude
    PrimInt63
    propagate_inline
    psem_defs
    pseudo_operator
    remove_globals
    result
    riscv_decl
    riscv_extra
    riscv_instr_decl
    riscv_lower_addressing
    riscv_lowering
    riscv
    riscv_params_common
    riscv_params_core
    riscv_params
    riscv_stack_zeroization
    sem_op_typed
    sem_params
    sem_params_of_arch_extra
    sem_type
    seq_extra
    seq
    sha256
    shift_kind
    slh_lowering
    slh_ops
    sopn
    Specif
    ssralg
    ssrbool
    ssreflect
    ssrfun
    ssrint
    ssrnat
    ssrnum
    stack_alloc
    stack_alloc_params
    stack_zeroization
    stack_zero_strategy
    std
    String0
    Sumbool
    syscall
    syscall_sem
    tagged
    tunneling
    tuple
    type
    Uint0
    unionfind
    unrolling
    utils0
    values
    var0
    varmap
    waes
    warray_
    wint_int
    wint_word
    word0
    word
    word_ssrZ
    wsize
    x86_decl
    x86_extra
    x86_instr_decl
    x86_lowering
    x86
    x86_params
    x86_stack_zeroization
    xseq
    Zpower))
