(library
 (name bar)
 (foreign_archives foo))

 (rule
 (deps Makefile foo.c myasm.s (source_tree inputs))
 (targets libfoo.a libfoo.so dllfoo.so)
 (action
 (no-infer
  (progn
   (bash "make -j1 --no-print-directory")
   (bash "cp -f libfoo.a ../libfoo.a")
   (bash "cp -f libfoo.so ../libfoo.so")
   (bash "cp -f dllfoo.so ../dllfoo.so")
   (bash "mkdir -p ../inputs")
   (bash "cp -f inputs/input ../inputs")
   ))))
