(library
  (name common)
  (wrapped false)
  (libraries jasmin.jasmin)
  (flags -rectypes)
  (modules common))

(tests
  (libraries jasmin.jasmin common)
  (deps
    (glob_files success/*)
    (glob_files fail/*)
    (glob_files error-messages/*))
  (flags -rectypes)
  (modules accept reject sct_errors)
  (names accept reject sct_errors))
