(library
  (name common)
  (wrapped false)
  (libraries jasmin.jasmin)
  (flags (:standard -rectypes))
  (modules common))

(tests
  (libraries jasmin.jasmin common)
  (deps
    error_messages.jazz)
  (flags (:standard -rectypes))
  (modules sct_errors)
  (names
    sct_errors))

(tests
  (libraries jasmin.jasmin common)
  (deps
    (glob_files success/*)
    (glob_files fail/*))
  (flags (:standard -rectypes))
  (modules accept reject)
  (names
    accept reject))

(tests
  (libraries jasmin.jasmin angstrom)
  (flags (:standard -rectypes))
  (modules sct_annot)
  (names
    sct_annot))
